@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.5.1) unstable; urgency=low
   * static-file: generate Last-Modified and ETag response headers
   * static-file: obey the Content-Type provided by the translation server
   * static-file: get Content-Type from extended attribute
+  * http-cache: use istream_null when cached resource is empty
 
  --
 
